feat: implement manual document rescan functionality
- Add manual_rescan() method to FileMonitor with detailed result reporting
- Add rescan_documents MCP tool for programmatic access
- Add /api/documents/rescan web endpoint for UI integration
- Add rescan button to web UI with loading states and result notifications
- Add configuration options for periodic and manual scanning
- Enhance periodic scanner with better error handling and logging
- Add WebSocket broadcast for rescan completion events
- Include comprehensive test coverage and documentation

This enables users to manually trigger directory scans to detect
new/modified/deleted files in both MCP and web interfaces.

--- a/src/webui/index.html
+++ b/src/webui/index.html
@@ -142,6 +142,15 @@
                             </svg>
                             Refresh
                         </button>
+                        <button id="rescan-documents" class="btn btn-secondary" title="Rescan documents directory for new/modified/deleted files">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M3 3v5h5"/>
+                                <path d="M3 8l1.88-1.88a9 9 0 0 1 12.56 0L21 8"/>
+                                <path d="M21 21v-5h-5"/>
+                                <path d="M21 16l-1.88 1.88a9 9 0 0 1-12.56 0L3 16"/>
+                            </svg>
+                            Rescan
+                        </button>
                     </div>
                 </div>
 
